# precedent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev.sh  pyproject.toml
eval/: golden_set.json  metrics.py  run_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css  theme.js
frontend/src/components/: ChunkList.jsx  ChunkMap.jsx  Controls.jsx  GraphExplorer.jsx  GraphView.jsx  InfoTip.jsx  OutcomeChip.jsx  PeerMode.jsx  Pipeline.jsx  QueryBar.jsx  SourceModal.jsx
infra/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
scripts/: build_seed.py  ingest.py  ingest_all.py
src/precedent/: models.py  params.py
src/precedent/api/: main.py
src/precedent/assembly/: app_config.py  model_config.py  switchboard.py
src/precedent/engine/: base.py  graph_engine.py  vector_engine.py
src/precedent/preprocessing/: chunking.py  embedding.py  entity_extraction.py  full_refresh.py
src/precedent/preprocessing/ingestion/: govinfo.py  utils.py
src/precedent/preprocessing/parsers/: billstatus.py  xml_helpers.py
src/precedent/response/: formatter.py  logger.py
src/precedent/stores/graph/: loader.py  queries.py  schema.py
src/precedent/stores/vector/: index_config.py  loader.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_engine.py  test_graph_full.py  test_ingestion.py  test_switchboard.py
