[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "precedent"
version = "0.1.0"
description = "GraphRAG vs Vector RAG for legislative precedent analysis"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "neo4j>=5.19",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",   # for env-driven config, see below
    "httpx>=0.27",               # for calling GovInfo API
    "lxml>=5.2",                  # for parsing the BILLSTATUS/BILLS XML
    "anthropic>=0.25",            # Claude SDK (transitive; LiteLLM routes to it)
    "litellm>=1.70",               # unified LLM routing for the model toggle
    "chromadb>=0.5",               # embedded/server vector store
    "python-dotenv>=1.0",          # load GOVINFO/ANTHROPIC keys from .env
    "requests>=2.32",              # GovInfo HTTP client
    "tqdm>=4.66",                  # ingestion progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",                   # linting + formatting, replaces black+flake8+isort
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
